# slither

./: Cargo.toml  readme.md
backend/: Cargo.toml
backend/src/: connection.rs  listener.rs  main.rs  state_updater.rs  transfer.rs
core/: Cargo.toml
core/src/: lib.rs  slither.rs  state.rs  world.rs
core/src/world/: mass_clots.rs  slithers.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs  mutex_ext.rs  painter.rs  state.rs  transfer.rs
macros/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
