[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
ecolor = "0.28"
emath = "0.28"

core = { path = "../core" }
protocol = { path = "../protocol" }
bincode = "1.3.3"
